--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "studio": "drizzle-kit studio",
     "deploy": "npx sst deploy --stage production",
     "remove-sst": "npx sst remove --stage production",
-    "start": "npx remotion studio src/remotion/index.ts"
+    "start": "npx remotion studio /remotion/index.ts"
   },
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
@@ -23,7 +23,13 @@
     "@astrojs/rss": "^4.0.4",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/ts-plugin": "^1.10.2",
+    "@aws-sdk/middleware-retry": "^3.374.0",
     "@libsql/client": "^0.12.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@pulumi/aws": "^6.52.0",
+    "@pulumi/pulumi": "^3.133.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -31,7 +37,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@remotion/cli": "4.0.212",
-    "@remotion/tailwind": "^4.0.212",
+    "@remotion/lambda": "4.0.212",
+    "@remotion/player": "4.0.212",
+    "@remotion/tailwind": "4.0.212",
     "astro": "^4.3.2",
     "astro-auto-import": "^0.4.2",
     "astro-font": "^0.0.77",
@@ -72,8 +80,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/marked": "^5.0.2",
     "@types/node": "20.11.16",
-    "@types/react": "18.2.53",
-    "@types/react-dom": "18.2.18",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.17",
     "drizzle-kit": "^0.20.17",
     "eslint": "^8.56.0",
