--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": " astro dev",
+    "sst-dev": "npx sst dev",
     "build": "astro build",
     "preview": "astro preview",
     "format": "prettier -w ./src",
@@ -26,6 +27,7 @@
     "@astrojs/ts-plugin": "^1.10.2",
     "@aws-sdk/middleware-retry": "^3.374.0",
     "@libsql/client": "^0.12.0",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@pulumi/aws": "^6.52.0",
@@ -40,6 +42,11 @@
     "@remotion/lambda": "4.0.212",
     "@remotion/player": "4.0.212",
     "@remotion/tailwind": "4.0.212",
+    "@tanstack/query-core": "^5.56.2",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-router": "^1.58.3",
+    "@tanstack/router-devtools": "^1.58.3",
+    "@tanstack/router-plugin": "^1.58.4",
     "astro": "^4.3.2",
     "astro-auto-import": "^0.4.2",
     "astro-font": "^0.0.77",
@@ -50,11 +57,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "drizzle-orm": "^0.30.9",
+    "drizzle-orm": "^0.33.0",
     "github-slugger": "^2.0.0",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.364.0",
     "marked": "^12.0.0",
+    "nanostores": "^0.11.3",
     "next-themes": "^0.3.0",
+    "oslo": "^1.2.1",
     "postgres": "^3.4.4",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
@@ -67,23 +77,26 @@
     "remark-toc": "^9.0.0",
     "remotion": "4.0.212",
     "remotion-sst": "^0.0.11",
+    "resend": "^4.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.4.41",
     "sst": "3.1.10",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.4"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.1.109",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/eslint-plugin-query": "^5.56.1",
     "@types/marked": "^5.0.2",
     "@types/node": "20.11.16",
     "@types/react": "18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.17",
-    "drizzle-kit": "^0.20.17",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8.56.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
